--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ tests/.gocache/
 
 # Test files (excluded from repo)
 integration_test.go
-tokenizer_test.go
-transform_test.go
+internal/tokenizer/tokenizer_test.go
+internal/transform/transform_test.go
 
 # Generated output files
 result.txt
